--- a/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/EmployeeDetails.razor
+++ b/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/EmployeeDetails.razor
@@ -2,7 +2,7 @@
 <h3>EmployeeDetails</h3>
 
 <h1 class=" diaplay-4 page-title">Details For @Employee.FirstName @Employee.LastName</h1>
-<a href="#" class="btn btn-danger">Update Information</a>
+<a href="@($"/editemployee/{Employee.EmployeeId}")" class="btn btn-danger">Update Information</a>
 
 
 <div class="col-12 row">
