--- a/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/EditEmployee.razor
+++ b/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/EditEmployee.razor
@@ -1,11 +1,12 @@
-﻿@page "/addemployee";
+﻿@page "/editemployee/{EmployeeId}"
 @using PieShopFullProject.Models;
-<h3>AddEmployee</h3
->
+<h3>
+    AddEmployee
+</h3>
 
 <section class="employee-edit">
-    <h1 class="page-title"> Add Employee </h1>
-    <EditForm Model="@Employee" OnValidSubmit="@Add">
+    <h1 class="page-title"> Edit Employee </h1>
+    <EditForm Model="@Employee" OnValidSubmit="@Edit">
         <DataAnnotationsValidator />
         <ValidationSummary />
 
@@ -41,26 +42,28 @@
 
         <div class="form-group row">
             <label for="Country" class="col-sm-3">Country :</label>
-            <InputSelect id="Country" class="form-control col-sm-8" @bind-Value="@CountryId">
+            <InputSelect id="Country" class="form-control col-sm-8" @bind-Value="@Employee.CountryId">
                 @foreach (var country in Countries)
                 {
                     <option value="@country.CountryId">@country.Name</option>
                 }
             </InputSelect>
+            <ValidationMessage class="alert alert-warning" role="alert" For="@(()=>Employee.CountryId)"></ValidationMessage>
         </div>
 
         <div class="form-group row">
             <label for="JobCategory" class="col-sm-3">JobCategory :</label>
-                @* altough you can directly add the job category 
-                    because we have this type but we prefer to add the id
-                    thats good for relation
-                    *@
-            <InputSelect id="JobCategory" class="form-control col-sm-8" @bind-Value="@JobCategoryId">
+            @* altough you can directly add the job category
+        because we have this type but we prefer to add the id
+        thats good for relation
+            *@
+            <InputSelect id="JobCategory" class="form-control col-sm-8" @bind-Value="@Employee.JobCategoryId">
                 @foreach (var job in JobCategories)
                 {
                     <option value="@job.JobCategoryId">@job.JobCategoryName</option>
                 }
             </InputSelect>
+            s
         </div>
 
         <div class="form-group row">
