--- a/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/EmployeeOverview.razor
+++ b/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/EmployeeOverview.razor
@@ -1,6 +1,8 @@
 ﻿@page "/employeeoverview"
 
 <h1 class="page-title">All Employee</h1>
+<hr />
+<a class="btn btn-lg btn-outline-info" href="@($"/addemployee")">Add Employee</a>
 
 <table class="table table-hover">
     <thead>
@@ -21,8 +23,8 @@
                 <td>@employee.FirstName</td>
                 <td>@employee.LastName</td>
                 <td>
-                    <a href="@($"employeedetail/{employee.EmployeeId}")" class="btn btn-primary table-btn">
-                        <i class="fas fa-info-circle"></i>
+                    <a href="@($"employeedetail/{employee.EmployeeId}")" class="btn btn-outline-danger">
+                        Details
                     </a>
                     <a class="btn btn-outline-danger" @onclick="(()=>Delete(employee.EmployeeId))">Delete</a>
                 </td>
