--- a/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/Index.razor
+++ b/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/Index.razor
@@ -1,7 +1,13 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
+<h1 class="display-4 page-title">Welcome To My Pie shop HRM Application</h1>
+<hr />
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+<div class="container">
+    About Out Pie Shop:
+
+    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+
+
+</div>
