--- a/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/_Host.cshtml
+++ b/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/_Host.cshtml
@@ -12,8 +12,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PieShopFullProject</title>
     <base href="~/" />
+    <link href="~/css/app.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
+    
+    <link href="css/open-iconic/font/css/open-iconic-bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
     <app>
