--- a/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/AddEmployee.razor
+++ b/2_Blazor_EfCore_PieShop/PieShopFullProject/Pages/PieShopApplication/AddEmployee.razor
@@ -1,7 +1,6 @@
 ﻿@page "/addemployee";
 @using PieShopFullProject.Models;
-<h3>AddEmployee</h3
->
+<h3>AddEmployee</h3>
 
 <section class="employee-edit">
     <h1 class="page-title"> Add Employee </h1>
